fix z-indexing

--- a/app/styles/components/_components.scss
+++ b/app/styles/components/_components.scss
@@ -52,6 +52,7 @@
 
 .c-players {
   overflow: hidden;
+  z-index: 1;
 }
 
 .c-player {
