--- a/app/styles/layouts/_nav.scss
+++ b/app/styles/layouts/_nav.scss
@@ -12,7 +12,7 @@
   position: absolute;
   transition: all .25s ease;
   width: $hamburger;
-  z-index: 2;
+  z-index: 10;
   
   &--line {
     background-color: color(a);
@@ -107,7 +107,7 @@
     translate: 90dvw;
     transition: translate .25s ease, opacity .25s .25s ease;
     width: 90dvw;
-    z-index: 1;
+    z-index: 9;
     
     @include query($md) {
       translate: 40dvw;
@@ -133,5 +133,6 @@
 
   &--blur{
     backdrop-filter: blur(10px);
+    z-index: 8;
   }
 }
